<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:padding="8dp"
              android:background="@color/white"
                android:orientation="vertical">
    <!-- CURRENT SESSION -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Current Session"
        android:textSize="18sp"
        android:textColor="@color/text_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/stats_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_speed_text"
        android:textSize="16sp"
        android:textColor="@color/text_color"/>
    <TextView
        android:id="@+id/stats_number_of_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_number_of_points_text"
        android:textSize="16sp"
        android:textColor="@color/text_color"/>
    <TextView
        android:id="@+id/stats_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_distance_text"
        android:textSize="16sp"
        android:textColor="@color/text_color"/>

    <!-- ALL TIME -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="All Time"
        android:textSize="18sp"
        android:textColor="@color/text_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <TextView
        android:id="@+id/stats_total_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_area_text"
        android:textSize="16sp"
        android:textColor="@color/text_color"/>
    <TextView
        android:id="@+id/stats_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_time_text"
        android:textSize="16sp"
        android:textColor="@color/text_color"/>
    <TextView
        android:id="@+id/stats_total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_distance_text"
        android:textSize="16sp"
        android:textColor="@color/text_color"/>
    <FrameLayout
        android:id="@+id/crouton_handle"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@null"/>
</LinearLayout>