<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.google.android.gms.maps.SupportMapFragment"/>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/map_dashboard"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/map_dashboard_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_strength"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">
                <View
                    android:id="@+id/map_gps_bar_1"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/gps_accuracy_empty"/>
                <View
                    android:id="@+id/map_gps_bar_2"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/gps_accuracy_empty"/>
                <View
                    android:id="@+id/map_gps_bar_3"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/gps_accuracy_empty"/>
                <View
                    android:id="@+id/map_gps_bar_4"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:background="@drawable/gps_accuracy_empty"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/map_dashboard_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_time"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"/>
            <TextView
                android:id="@+id/map_dashboard_session_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/map_dashboard_gps"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"/>
            <TextView
                android:id="@+id/map_dashboard_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_km"
                android:textSize="14sp"
                android:textColor="@color/text_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/map_dashboard_time"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"/>
            <TextView
                android:id="@+id/map_dashboard_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textSize="14sp"
                android:textColor="@color/text_color"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/map_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">
        <Button
            android:id="@+id/map_record_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:elevation="2dp"
            android:background="@drawable/record_button_start"
            android:textColor="@android:color/white"/>
        <ImageView
            android:id="@+id/map_record_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerInParent="true"
            android:elevation="6dp"
            android:paddingLeft="5dp"
            android:src="@drawable/ic_play"/>
    </RelativeLayout>
</RelativeLayout>