<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/welcome_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/welcome_bullet_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/welcome_bullet_one"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/bullet_selected"/>

        <ImageView
            android:id="@+id/welcome_bullet_two"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:src="@drawable/bullet"/>

        <ImageView
            android:id="@+id/welcome_bullet_three"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/bullet"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_parent"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/sign_in_button_facebook"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"/>

        <Button
            android:id="@+id/sign_in_button_email"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:background="@drawable/primary_button"
            android:gravity="center"
            android:text="@string/sign_in_email"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/welcome_email_sign_in_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:visibility="gone">
        <TextView
            android:id="@+id/welcome_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:text="Sign In/Create Account"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/welcome_email_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_email_title"
            android:layout_margin="16dp"
            android:inputType="textEmailAddress"
            android:hint="email"
            android:ems="12"/>
        <EditText
            android:id="@+id/welcome_email_edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_email_edit_email"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="password"
            android:ems="12"/>
        <TextView
            android:id="@+id/welcome_email_edit_password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_email_edit_password"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="at least 8 characters, 1 number, 1 uppercase"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/welcome_email_back_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:text="@string/back"/>
            <Button
                android:id="@+id/welcome_email_submit_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/primary_button"
                android:enabled="false"
                android:text="@string/submit"
                android:textColor="@color/disabled_gray_text"/>
        </LinearLayout>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/crouton_handle"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@null"/>
    <ProgressBar
        android:id="@+id/welcome_loading"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"/>
</RelativeLayout>